--- a/frontend/src/blocks/page/page.css
+++ b/frontend/src/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
     max-width: 1280px;
     min-width: 320px;
+    min-height: 100vh;
     margin: 0 auto;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
